--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
+    "sails-postgresql": "^4.0.0",
     "sails-seed": "^0.5.0"
   },
   "devDependencies": {
